# su2-node-matrix-elements

./: .gitignore  Closed-Form Matrix Elements for Arbitrary-Valence SU(2) Nodes via Generating Functionals.tex  README.md  _config.yml  index.html  pyproject.toml
data/derivative/: derivative_stability_comparison.json
data/reference/: node_matrix_reference.json
data/stability/: node_matrix_stability_report.json
docs/: Closed-Form Matrix Elements for Arbitrary-Valence SU(2) Nodes via Generating Functionals.tex  README.md  feed.xml  index.html  technical-documentation.md
scripts/: generate_derivative_stability_report.py  generate_reference_tables.py  generate_stability_report.py
src/su2_node_matrix_elements/: __init__.py  derivative.py  model.py  stability.py
tests/: test_derivative.py  test_model.py  test_scripts.py  test_stability.py
